GUI changes (unfinished! profile broken, horrible, etc) Vote implementation (buggy, undescriptive errors) Database script fixed

--- a/.settings/org.eclipse.cdt.core.prefs
+++ b/.settings/org.eclipse.cdt.core.prefs
@@ -1,4 +1,9 @@
 eclipse.preferences.version=1
+environment/project/cdt.managedbuild.toolchain.gnu.base.190875518.281319125.1162971244.870309536/LC_MESSAGES/delimiter=\:
+environment/project/cdt.managedbuild.toolchain.gnu.base.190875518.281319125.1162971244.870309536/LC_MESSAGES/operation=append
+environment/project/cdt.managedbuild.toolchain.gnu.base.190875518.281319125.1162971244.870309536/LC_MESSAGES/value=en_US.UTF-8
+environment/project/cdt.managedbuild.toolchain.gnu.base.190875518.281319125.1162971244.870309536/append=true
+environment/project/cdt.managedbuild.toolchain.gnu.base.190875518.281319125.1162971244.870309536/appendContributed=true
 environment/project/cdt.managedbuild.toolchain.gnu.base.190875518.281319125.1162971244/LC_MESSAGES/delimiter=\:
 environment/project/cdt.managedbuild.toolchain.gnu.base.190875518.281319125.1162971244/LC_MESSAGES/operation=append
 environment/project/cdt.managedbuild.toolchain.gnu.base.190875518.281319125.1162971244/LC_MESSAGES/value=en_US.UTF-8
