--- a/.settings/org.eclipse.cdt.core.prefs
+++ b/.settings/org.eclipse.cdt.core.prefs
@@ -7,6 +7,9 @@ environment/project/cdt.managedbuild.toolchain.gnu.base.190875518.281319125.1162
 environment/project/cdt.managedbuild.toolchain.gnu.base.190875518.281319125.1162971244/LC_MESSAGES/delimiter=\:
 environment/project/cdt.managedbuild.toolchain.gnu.base.190875518.281319125.1162971244/LC_MESSAGES/operation=append
 environment/project/cdt.managedbuild.toolchain.gnu.base.190875518.281319125.1162971244/LC_MESSAGES/value=en_US.UTF-8
+environment/project/cdt.managedbuild.toolchain.gnu.base.190875518.281319125.1162971244/PATH/delimiter=\:
+environment/project/cdt.managedbuild.toolchain.gnu.base.190875518.281319125.1162971244/PATH/operation=append
+environment/project/cdt.managedbuild.toolchain.gnu.base.190875518.281319125.1162971244/PATH/value=/usr/lib64/qt-3.3/bin\:/usr/local/bin\:/usr/bin\:/bin\:/usr/local/sbin\:/usr/sbin\:/home/nico/android-sdk-linux\:/home/nico/android-sdk-linux/tools\:/home/nico/android-sdk-linux/platform-tools
 environment/project/cdt.managedbuild.toolchain.gnu.base.190875518.281319125.1162971244/append=true
 environment/project/cdt.managedbuild.toolchain.gnu.base.190875518.281319125.1162971244/appendContributed=true
 org.eclipse.cdt.core.formatter.alignment_for_arguments_in_method_invocation=16
