Template organization (described in docs/template_organization) Deleted innecesary objects in ViewContent.h

--- a/.cproject
+++ b/.cproject
@@ -48,7 +48,7 @@
 						</toolChain>
 					</folderInfo>
 					<sourceEntries>
-						<entry excluding="src/pci_skin.cpp|www|sql|docs" flags="VALUE_WORKSPACE_PATH|RESOLVED" kind="sourcePath" name=""/>
+						<entry excluding="tmpl/pci_skin.cpp|src/pci_skin.cpp|www|sql|docs" flags="VALUE_WORKSPACE_PATH|RESOLVED" kind="sourcePath" name=""/>
 					</sourceEntries>
 				</configuration>
 			</storageModule>
